--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "husky": "next",
     "include-all": "^1.0.0",
     "joi": "^13.1.2",
     "rc": "1.0.1",
@@ -15,6 +16,7 @@
   "scripts": {
     "debug": "node debug app.js",
     "start": "node app.js",
+    "lint": "eslint --ignore-path .gitignore . --quiet --ext .js --fix",
     "test": "node ./node_modules/mocha/bin/mocha test/bootstrap.test.js test/integration/**/*.test.js"
   },
   "main": "app.js",
@@ -25,10 +27,22 @@
   "author": "ytx",
   "license": "",
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
+    "eslint": "^4.19.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.0.1",
     "eventproxy": "^1.0.0",
     "mocha": "^5.0.4",
     "power-assert": "^1.4.4",
     "sinon": "^4.4.6",
     "supertest": "^3.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm t"
+    }
   }
 }
